[package]
name = "explorer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "e88f9fa7", features = ["serde", "base64", "next"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
reqwest = { version = "0.11", features = ["json"] }
backoff = { version = "0.4.0", git = "https://github.com/leighmcculloch/ihrwein--backoff", branch = "glootimers", features = ["wasm-bindgen", "futures", "tokio", "gloo-timers"] }
hex = "0.4.3"
