[package]
name = "soroban-contract-ops-explore"
version = "0.1.0"
edition = "2021"
description = "Web app to explore invocations for a given Soroban smart contract."
readme = "README.md"
repository = "https://github.com/xycloo/soroban-explorer"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "soroban", "stellar"]
categories = ["gui", "wasm", "web-programming", "blockchain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
explorer-common = { path = "../../explorer-common" }
wasm-bindgen-futures = "0.4.33"
log = "0.4.17"
wasm-bindgen = { version="0.2.83" }
web-sys = {version = "0.3.56", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]}
wasm-logger = "0.2.0"
serde_json = "1.0.89"
stdweb = "0.4.20"