[package]
name = "soroban-tx-explorer"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
explorer-common = { path = "../../explorer-common" }
wasm-bindgen-futures = "0.4.33"
log = "0.4.17"
wasm-bindgen = { version="0.2.83" }
web-sys = {version = "0.3.56", features = ["HtmlInputElement"]}
wasm-logger = "0.2.0"
serde_json = "1.0.89"
stdweb = "0.4.20"